--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:26:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;DataSetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:28:01</td>   <td>67354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:28:01</td>   <td>68063</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;DataClean</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:27:40</td>   <td>46614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="ebe890">  <td>22/09/20 20:27:27</td>   <td>33229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">Test1</td> 
-  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="ebe890">  <td>22/09/20 20:27:48</td>   <td>54938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">Test3</td> 
-  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:28:01</td>   <td>67354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
-<tr bgcolor="94b0ad">  <td>22/09/20 20:27:40</td>   <td>46614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@169e6180]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>main@775514090</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:10:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.DataSetUp()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&gt;&gt;DataSetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:10:56</td>   <td>3291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>22/09/22 18:11:19</td>   <td>26910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test1()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">Test1</td> 
+  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:11:42</td>   <td>49233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:11:44</td>   <td>51798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.SetUp(java.lang.reflect.Method)[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>22/09/22 18:11:56</td>   <td>63571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SimplilearnLoginTest.Test3()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">Test3</td> 
+  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:12:11</td>   <td>78263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
+<tr bgcolor="9caeb1">  <td>22/09/22 18:12:14</td>   <td>81840</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.DataClean()[pri:0, instance:testcases.SimplilearnLoginTest@7ceb3185]">&lt;&lt;DataClean</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@776484396</td>   <td></td> </tr>
 </table>
